src/test/deca/context/invalid/test_error_3.71.deca
// Description:
//    Soulève l'erreur (3.71)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Class expected behind "." (règle 3.71)
// Historique:
//      cree le 06/01/2022

class A{
    int x;
}

{
	A a;
    int b;
    b = a.x();
}
